--- a/src/front-end/src/app/navbar/navbar.component.css
+++ b/src/front-end/src/app/navbar/navbar.component.css
@@ -1,12 +1,15 @@
-header {
-  position: fixed;
-  left: 0;
-  top: 0;
+nav {
   display: inline-flex;
   justify-content: space-between;
-  padding: 20px 40px;
+  padding: 0 40px;
   width: 100vw;
-  height: 50px;
+  height: 70px;
   background: #2B2B2B;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.25);
+}
+
+@media (max-width: 992px) {
+  nav {
+    padding: 0 16px;
+  }
 }
