--- a/src/front-end/src/styles.css
+++ b/src/front-end/src/styles.css
@@ -1,18 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
 
 * {
-  font-family: 'DM Sans', sans-serif;
   margin: 0;
   padding: 0;
   outline: none;
+  box-sizing: border-box;
 }
 
-html {
-  width: 100vw;
-  min-height: 100vh;
+html, body {
+  height: 100%;
 }
 
 body {
   background: #2B2B2B;
   box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+}
+
+body, input, button {
+  font-family: 'DM Sans', sans-serif;
+  color: white;
+  letter-spacing: 0.1em;
 }
