--- a/src/front-end/src/styles.css
+++ b/src/front-end/src/styles.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
-
 * {
   margin: 0;
   padding: 0;
@@ -18,7 +16,7 @@ body {
 }
 
 body, input, button {
-  font-family: 'DM Sans', sans-serif;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
   color: white;
   letter-spacing: 0.1em;
 }
