--- a/src/front-end/src/app/app.component.html
+++ b/src/front-end/src/app/app.component.html
@@ -1,3 +1,7 @@
+<mat-toolbar class="mat-elevation-z8">
+  <img src="{{ logo }}" alt="{{ title }}">
+</mat-toolbar>
+
 <div class="container">
   <router-outlet></router-outlet>
 </div>
