--- a/src/front-end/src/styles.css
+++ b/src/front-end/src/styles.css
@@ -11,7 +11,7 @@ body {
 }
 
 body {
-  background: #2B2B2B;
+  background: #212121;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
 }
