--- a/src/front-end/src/app/views/sign-in/sign-in.component.css
+++ b/src/front-end/src/app/views/sign-in/sign-in.component.css
@@ -1,1 +1,79 @@
+main {
+  width: 100%;
+  height: calc(100vh - 70px);
+  padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
+.slogan-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.slogan-container h1,
+.slogan-container h2 {
+  font-size: 32px;
+  line-height: 37px;
+  letter-spacing: 0.1em;
+}
+
+.slogan-container h1 {
+  font-weight: 700;
+  margin-bottom: 40px;
+}
+
+.slogan-container h2 {
+  font-weight: 400;
+}
+
+.slogan-container p {
+  font-size: 18px;
+  line-height: 30px;
+  max-width: 400px;
+  color: #E5E5E5;
+}
+
+.form-container {
+  flex: 1;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.form-box {
+  width: 400px;
+  height: 400px;
+  border: 2px solid #9C27B0;
+  border-radius: 50px;
+}
+
+@media (max-width: 820px) {
+  main {
+    padding: 40px 20px;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  .slogan-container {
+    flex: unset;
+    align-items: center;
+    margin-bottom: 40px;
+  }
+
+  .slogan-container p {
+    text-align: center;
+  }
+
+  .form-container {
+    justify-content: center;
+  }
+}
+
+@media (max-width: 425px) {
+  .form-box {
+    width: 100%;
+  }
+}
