--- a/src/front-end/src/app/modules/account/sign-in/sign-in.component.css
+++ b/src/front-end/src/app/modules/account/sign-in/sign-in.component.css
@@ -44,10 +44,26 @@ main {
 }
 
 .form-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: 400px;
   height: 400px;
   border: 2px solid #9C27B0;
   border-radius: 50px;
+  padding: 40px;
+}
+
+mat-form-field {
+  width: 100%;
+  margin-bottom: 20px;
+  font-size: 18px;
+}
+
+button {
+  width: 100%;
+  height: 40px;
+  margin-top: 20px;
 }
 
 @media (max-width: 820px) {
