--- a/src/front-end/src/app/app.component.html
+++ b/src/front-end/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="mat-elevation-z8">
+<mat-toolbar *ngIf="signed" class="mat-elevation-z8">
   <img src="{{ logo }}" alt="{{ title }}">
 </mat-toolbar>
 
