--- a/src/front-end/src/app/modules/account/sign-in/sign-in.component.html
+++ b/src/front-end/src/app/modules/account/sign-in/sign-in.component.html
@@ -3,28 +3,23 @@
     <h2>Bem-vindo ao</h2>
     <h1>DEV BINDER</h1>
 
-    <p>
-      Conecte-se com seus amigos do <strong>GitHub</strong> e compartilhe suas
-      experiências!
-    </p>
+    <p>Conecte-se com seus amigos do <strong>GitHub</strong> e compartilhe suas experiências!</p>
   </div>
 
   <div class="form-container">
     <div class="form-box">
-      <form (ngSubmit)="handleSubmit()">
-        <mat-form-field apperance="outline">
-          <mat-label>Usuário</mat-label>
-          <input matInput type="text" name="username" [(ngModel)]="credentials.username" autocomplete="off">
-          <mat-hint>Digite seu usuário do GitHub</mat-hint>
-        </mat-form-field>
-        <mat-form-field apperance="outline">
-          <mat-label>Senha</mat-label>
-          <input matInput type="password" name="password" [(ngModel)]="credentials.password">
-          <mat-hint>Mínimo de 6 caracteres</mat-hint>
-        </mat-form-field>
+      <mat-form-field apperance="outline">
+        <mat-label>Usuário</mat-label>
+        <input matInput type="text" name="username" autocomplete="off" [(ngModel)]="credentials.username">
+        <mat-hint>Digite seu usuário do GitHub</mat-hint>
+      </mat-form-field>
+      <mat-form-field apperance="outline">
+        <mat-label>Senha</mat-label>
+        <input matInput type="password" name="password" [(ngModel)]="credentials.password">
+        <mat-hint>Mínimo de 6 caracteres</mat-hint>
+      </mat-form-field>
 
-        <button type="submit" mat-flat-button color="accent">Entrar</button>
-      </form>
+      <button type="button" mat-flat-button color="accent" (click)="handleSubmit()">Entrar</button>
     </div>
   </div>
 </main>
