--- a/src/front-end/src/app/modules/account/sign-in/sign-in.component.html
+++ b/src/front-end/src/app/modules/account/sign-in/sign-in.component.html
@@ -19,7 +19,7 @@
         <mat-hint>Mínimo de 6 caracteres</mat-hint>
       </mat-form-field>
 
-      <button type="button" mat-flat-button color="accent" (click)="handleSubmit()">Entrar</button>
+      <button type="button" mat-flat-button color="accent" (click)="login()">ENTRAR</button>
     </div>
   </div>
 </main>
