--- a/src/front-end/src/app/app.component.html
+++ b/src/front-end/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar *ngIf="signed" class="mat-elevation-z8">
-  <img src="{{ logo }}" alt="{{ title }}">
+  <img src="{{ logo }}" alt="Logo">
 </mat-toolbar>
 
 <div class="container">
