Logout working too

--- a/src/front-end/src/app/app.component.html
+++ b/src/front-end/src/app/app.component.html
@@ -1,5 +1,9 @@
 <mat-toolbar *ngIf="signed" class="mat-elevation-z8">
   <img src="{{ logo }}" alt="Logo">
+
+  <button mat-icon-button (click)="logout()">
+    <mat-icon>exit_to_app</mat-icon>
+  </button>
 </mat-toolbar>
 
 <div class="container">
