--- a/src/front-end/src/app/app.component.css
+++ b/src/front-end/src/app/app.component.css
@@ -1,6 +1,7 @@
 .container {
   max-width: 1000px;
   margin: 0 auto;
+  display: flex;
 }
 
 mat-toolbar {
@@ -8,6 +9,7 @@ mat-toolbar {
   justify-content: space-between;
   height: 70px;
   padding: 0 40px;
+  z-index: 2;
 }
 
 .right-side {
@@ -31,6 +33,23 @@ mat-toolbar {
 
 .right-side > button:first-of-type:hover img {
   border: 2px solid #69F0AE;
+}
+
+nav {
+  width: 300px;
+  height: calc(100vh - 70px);
+  padding: 20px;
+  background: transparent;
+  border-right: 2px solid #9C27B0;
+}
+
+main {
+  width: 100%;
+  overflow-y: auto;
+}
+
+main.with-sidenav {
+  padding: 0 20px;
 }
 
 @media (max-width: 425px) {
